--- a/blog-app/pyproject.toml
+++ b/blog-app/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.8"
 fastapi = "^0.110.0"
 pytest = "^8.0.2"
+uvicorn = {extras = ["standard"], version = "^0.27.1"}
 
 
 [build-system]
